# muon-isa-tests

./: Makefile.in  configure  configure.ac
benchmarks/common/: test.ld
env/: encoding.h  link.ld  riscv_test.h
isa/: .gitignore  Makefile  fuse_all.sh  neutrino-p-sync
isa/macros/scalar/: test_macros.h  vx_macros.h
isa/mu32/: Makefrag  flush.S  lb_shared.S  lbu_shared.S  ld_st_shared.S  lh_shared.S  lhu_shared.S  lw_shared.S  sb_shared.S  sh_shared.S  st_ld_shared.S  sw_shared.S
isa/neutrino/: Makefrag  sync.S
isa/rv32ui/: Makefrag
isa/rv32uzfh/: Makefrag  fexp.S
isa/rv64uf/: fadd.S  fcmp.S  fmin.S  move.S  recoding.S
isa/rv64ui/: fence_i.S  jalr.S
isa/rv64uzfh/: Makefrag  fadd.S  fclass.S  fcmp.S  fcvt.S  fcvt_w.S  fdiv.S  fexp.S  fmadd.S  fmin.S  ldst.S  move.S  recoding.S
isa/vx32/: Makefrag  bar.S  pred.S  split.S  tmc.S  wspawn.S
